--- a/index.html
+++ b/index.html
@@ -20,11 +20,61 @@
 <body>
     <div class="wrapper">
 
-        <div class="debug content d-flex">
+        <div class="content d-flex">
             <div class="header d-flex">
                 <a href="#" class="btn">effettua l'upgrade</a>
             </div>
-            <div id="sidebar" class="debug">
+            <div id="sidebar" class="d-flex s-btw column">
+                <div>
+                    <img class="logo-side" src="img/logo.svg" alt="">
+                    <div id="mainlist">
+                        <ul>
+                            <li>
+                                <a href="#"><img src="img/home.svg" alt=""></a>
+                                <a href="#">home</a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="img/search.svg" alt=""></a>
+                                <a href="#">cerca</a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="img/libreria.svg" alt=""></a>
+                                <a href="#">la tua libreria</a>
+                            </li>
+                        </ul>
+                    </div>
+                
+                    <h3 class="uppercase">playlist</h3>
+                    <div id="second-list">
+                        <ul>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-square-plus"></i></a>
+                                <a href="#">Crea Playlist</a>
+                            </li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div>
+                    <div id="ap" class="d-flex">
+                        <img src="img/download.svg" alt="">
+                        <a href="#">Installa app</a>
+                    </div>
+                    <div id="ap-bottom" class="d-flex align">
+                        <div class="circle d-flex">
+                            <img src="img/profile.svg" alt="">
+                        </div>
+                        <h3>Jhon Doe</h3>
+                    </div>
+                </div>
+
 
             </div>
             <main>
