--- a/index.html
+++ b/index.html
@@ -277,8 +277,51 @@
             </main>
         </div>
 
-        <div id="toolbar" class="debug">
+        <div id="toolbar" class="d-flex s-btw">
+            <div class="d-flex align">
+                <div class="cont-img">
+                    <img src="img/sinister.jpeg" alt="">
+                </div>
+                <div class="cont-title-tool">
+                    <h4>sinister</h4>
+                    <dd>Brano Nome</dd>
+                </div>
+                <div class="cont-font">
+                    <a href="#"><i class="fa-regular fa-heart"></i></a>
+                    <a href="#"><i class="fa-regular fa-folder"></i></a>
+                </div>
+            </div>
 
+            <div>
+                <div id="cont-central" class="d-flex justify">
+                    <a href="#"><i class="fa-solid fa-shuffle"></i></a>
+                    <a href="#"><i class="fa-solid fa-backward-step"></i></a>
+                    <a href="#"><i class="fa-solid fa-circle-play"></i></a>
+                    <a href="#"><i class="fa-solid fa-forward-step"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-rotate-right"></i></a>
+                </div>
+                <div id="central-bar" class="d-flex align justify">
+                    <span>0:25</span>
+                    <div>
+                        <div class="barsbig d-flex">
+                            <div class="leftbig"></div>
+                            <div class="rightbig"></div>
+                        </div>
+                    </div>
+                    <span>4:35</span>
+                </div>
+            </div>
+
+            <div class="font-right d-flex align">
+                <a href="#"><i class="fa-solid fa-bars"></i></a>
+                <a href="#"><i class="fa-solid fa-desktop"></i></a>
+                <a href="#"><i class="fa-solid fa-volume-high"></i></a>
+                <div class="bars d-flex">
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+                
+            </div>
         </div>
 
     </div>
