non rieco a fare la toolbar

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 </div>
             </div>
 
-            <div class="font-right d-flex align" id="cont-right">
+            <div class="font-right d-flex align flex-end" id="cont-right">
                 <a href="#"><i class="fa-solid fa-bars"></i></a>
                 <a href="#"><i class="fa-solid fa-desktop"></i></a>
                 <a href="#"><i class="fa-solid fa-volume-high"></i></a>
